# NetWorkLib_PNet

./: PNet.sln  README.md
LinuxPnet/scr/: CMakeLists.txt  PNet.sln  compilerFile.sh  compilerFiler.sh
LinuxPnet/scr/Client/: Client.vcxproj  Client.vcxproj.filters  SourceClient.cpp
LinuxPnet/scr/Client/Debug/: Client.exe.recipe  Client.ilk  vc143.idb
LinuxPnet/scr/Client/Debug/Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LinuxPnet/scr/Client/x64/Debug/: Client.exe.recipe  Client.ilk  vc143.idb
LinuxPnet/scr/Client/x64/Debug/Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Client.lastbuildstate  link.read.1.tlog  (+2 more)
LinuxPnet/scr/Debug/: PNet.idb  PNet.lib
LinuxPnet/scr/PNet/: IpEndPointr.cpp  IpEndPointr.h  IpVersion.h  MyClassSocket.cpp  MyClassSocket.h  NetWork.cpp  NetWork.h  PNet.vcxproj  PNet.vcxproj.filters  Package.cpp  Package.h  PacketExc.h  PacketType.h  Presult.h  SocketHandle.h  SocketOption.h  ValidatorIP.h  includeME.h  Сonstant.h
LinuxPnet/scr/PNet/Debug/PNet.tlog/: CL.1800.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
LinuxPnet/scr/Server/: Server.vcxproj  Source.cpp
LinuxPnet/scr/Server/Debug/: Server.exe.recipe  Server.ilk  vc143.idb
LinuxPnet/scr/Server/Debug/Server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Server.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LinuxPnet/scr/Server/x64/Debug/: Server.exe.recipe  Server.ilk  vc143.idb
LinuxPnet/scr/x64/Debug/: PNet.idb  PNet.lib
(+38 files in other folders)
